fix: add gap to button

--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -4,6 +4,7 @@
   cursor: pointer;
 
   display: inline-flex;
+  gap: 8px;
   align-items: center;
   justify-content: center;
 
